# bf-hackathon

./: .gitignore  README.md  gui.py  main.py  pyproject.toml  requirements.txt  run_ros2_gui.sh
build_old/: gui.py
functions/: text2speech.py  waypoint.py
models/: gesture_model_key2.tflite  mediapipe_hands.py  person_det_media.py  ros_video_recorder.py  speech_recognizer.py  speech_text_speech.py  yolo.py
models/utils/: video_utils.py
scenarios/: factory_scenario.py  office_scenario.py
sensors/: display.py  moving.py  speaker.py
