[project]
name = "bf-hackathon"
version = "0.1.0"
description = ""
authors = [
    {name = "Vojtěch Sýkora",email = "vojtasykor@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mediapipe (>=0.10.21,<0.11.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "cv-bridge (>=1.13.0.post0,<2.0.0)",
    "rospkg (>=1.6.0,<2.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
